--- a/web/src/static/css/index.css
+++ b/web/src/static/css/index.css
@@ -1,6 +1,6 @@
 body {
-  width: 100dvw;
-  height: 100dvh;
+  width: 98dvw;
+  height: 98dvh;
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -38,3 +38,23 @@ body {
 .bg-debug-red {
   background-color: red;
 }
+
+.chat-content-grid {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  background-color: #D3E1E2;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.padding-16px {
+  padding: 16px;
+}
+
+.gap-8px {
+  gap: 8px;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+} 
